# celsiusclient

./: README.md  pyproject.toml
src/celsiusclient/: __main__.py  settings.py
