[tool.poetry]
name = "celsiusclient"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zuev <zuev08@gmail.com>"]
readme = "README.md"
packages = [{include = "celsiusclient", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-socketio = {extras = ["client"], version = "^5.7.2"}
adafruit-circuitpython-dht = "^3.7.7"
rpi-gpio = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
